@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.video.funimationnow" version="0.1.2" name="FunimationNOW" provider-name="Protocol-X">
+<addon id="script.video.funimationnow" version="0.1.3" name="FunimationNOW" provider-name="Protocol-X">
     <requires>
         <import addon="xbmc.python" version="2.24.0" />
         <!--<import addon="script.module.dateutil" version="2.4.2"/>-->
@@ -17,7 +17,7 @@
         <description lang="en_gb">Funimation &amp; Crunchyroll[CR]Working Together to Give You More![CR]A bigger selection, a growing community, and the world's best English dubs.
         </description>
         <disclaimer lang="en_gb">Some parts of this addon may not be legal in your country of residence - please check with your local laws before installing.</disclaimer>
-        <news>[B]0.1.2[/B][CR]- Update fix to address the new change in the API for device specific content.
+        <news>[B]0.1.3[/B][CR]- Update fix to address the new change in the API for device specific content.
         </news>
         <platform>all</platform>
         <language />
