@@ -1,3 +1,7 @@
+[B]0.1.3[/B]
+- Update to add support for new multi URL video links
+- Subtitles are now a setting in the Add-on
+
 [B]0.1.2[/B]
 - Update fix to address the new change in the API for device specific content.
 
